@@ -1,3 +1,5 @@
+* Add default address on party
+
 Version 1.6.0 - 2010-05-10
 * Bug fixes (see mercurial logs for details)
 * Don't allow empty vat_number if vat_country is set
